--- a/resume.css
+++ b/resume.css
@@ -1,23 +1,31 @@
-body
-{
-	background:bisque;
+body{
+	background: bisque;
+	justify-content: space-around;
 }
 .maindiv{
-	display: flex;
-	color: red;
-	box-shadow: 2px 2px 2px 2px;
-	margin: 3%;
+	background: #BE2525;
+	margin: 4%;
+    display: flex;
+    justify-content: space-around;
 }
 .leftdiv{
-	color:black;
+	background: orange;
+	border-radius: 3%;
 	text-align: center;
-	box-shadow: 2px 2px 2px 2px;
+	width: 30%;
+	height: 50%;
+	box-shadow: 4px 4px 4px 4px;
 	margin: 3%;
-	height: 30%;
 }
 .rightdiv{
-	color: blue;
-padding: 2%;
-	box-shadow: 2px 2px 2px 2px;
-	margin: 3%;
+	background: pink;
+	margin: 4%;
+	border-radius: 2%;
+	box-shadow: 4px 4px 4px 4px;
+	width: 60%;
+	padding: 2%;
+}
+img{
+	width: 40%;
+	height: 35%;
 }
